More doc updates. Added revisions table

--- a/Design Doc/group49_design_4.tex
+++ b/Design Doc/group49_design_4.tex
@@ -76,6 +76,37 @@ The Summer of 2019 will be the 50th anniversary of the Apollo 11 moon landing an
 \newpage
 \pagenumbering{arabic}
 \tableofcontents
+\subsection*{Revisions}
+\begin{tabular} {|p{4cm}|p{5cm}|p{6cm}|}
+\hline
+Section & Original & New \\ \hline
+3.5.2 - The Flight Path & \begin{itemize}
+  \item We will use a data set to create the flight path
+\end{itemize} & \begin{itemize}
+  \item A data set would be ideal, but we will need to create our own
+\end{itemize}\\ \hline
+3.5.3 - Planetarium SDK & \begin{itemize}
+  \item Unsure of how to show our animation in the planetarium
+\end{itemize} & \begin{itemize}
+  \item OMSI uses a unique scripting language for implementation in the planetarium
+\end{itemize}\\ \hline
+4.2 - Composition & \begin{itemize}
+  \item Go through mission from launch to splashdown
+\end{itemize} & \begin{itemize}
+  \item Beginning and end with historic video, middle for interactive views
+\end{itemize}\\ \hline
+4.4 - Dependency & \begin{itemize}
+  \item Mostly dependent on flight path and mission time
+\end{itemize} & \begin{itemize}
+  \item Dependent on the story-line that we created (Beginning, middle, end)
+\end{itemize}\\ \hline
+4.5 - Information & \begin{itemize}
+  \item Focused on flight path information
+\end{itemize} & \begin{itemize}
+  \item How to make the scene realistic through size and positioning
+\end{itemize}\\ \hline
+
+\end{tabular}
 
 % 7. uncomment this (if applicable). Consider adding a page break.
 %\listoffigures
