--- a/Requirements Doc/group49-requirements_4.tex
+++ b/Requirements Doc/group49-requirements_4.tex
@@ -75,6 +75,31 @@
 \newpage
 \pagenumbering{arabic}
 \tableofcontents
+\subsection*{Revisions}
+\begin{tabular} {|p{3.25cm}|p{5cm}|p{7cm}|}
+\hline
+Section & Original & New \\ \hline
+1.2 - Scope & \begin{itemize}
+  \item Animate entire mission
+  \item 25 minutes
+\end{itemize} & \begin{itemize}
+  \item Focus on the Lunar Surface
+  \item 10 minutes, allowing for questions
+\end{itemize}\\ \hline
+2.2 3.2 - Functions & \begin{itemize}
+  \item Go through mission from launch to splashdown
+\end{itemize} & \begin{itemize}
+  \item Beginning and end with historic video, middle for interactive views
+\end{itemize}\\ \hline
+3.1 - External Interfaces & \begin{itemize}
+  \item Unsure how to implement the animation at OMSI
+\end{itemize} & \begin{itemize}
+  \item The planetarium uses a unique script that we will translate our project into
+\end{itemize}\\ \hline
+
+\end{tabular}
+
+
 % 7. uncomment this (if applicable). Consider adding a page break.
 %\listoffigures
 %\listoftables
@@ -126,23 +151,8 @@ Our group will be recreating the Apollo 11 mission using 3D graphics. This proje
 
 \begin{figure}[!htb]
     \includegraphics[width=\linewidth]{Gantt.eps}
-    \caption{Gantt chart of proposed timeline}
+    \caption{Original gantt chart of proposed timeline}
     \label{fig:Gantt Chart}
 \end{figure}
-
-\section{Revisions}
-Since this document was first drafted, the requirements for our project have changed from what was originally given. Revisions were made based on more communication with our client, better understanding of our goals, as well as our limitations. 
-
-\subsection*{Appendix A} 
- On January 3rd, our team drove with Mike Bailey to OMSI to meet with our client, Jim Todd, for the first time. During our meeting, Jim Todd provided our team with more refined requirements for our video. The most significant change was that Jim Todd wanted our animation to focus on the aspects Apollo 11 mission that took place on the lunar surface. Instead of animating the launch, flight to the moon, and flight back to Earth, our team will now include historic audio/video to provide context to the Apollo 11 mission. We needed to re-think our approach to the animation and we took more time to design. 
-
-Our team will also include a default animation that can be paused and restarted whenever the audience wishes to change viewpoints. The video will be from the perspective of an astronaut as he leaves the lunar module, travels the lunar surface, plants the American flag, and finally board the lunar module for lunar launch. Changing viewpoints during the default video will pause the animation and the user will be able to press a key on the keyboard to continue the video.
-
-Our goal for the length of the animation is now 10-15 minutes long instead of the original 25 minutes. This change was made because each planetarium show is 25 minutes long and our team wanted to allow the audience time to ask any questions about the Apollo 11 mission during the show.
-
-\subsection*{Appendix B}
-Our team traveled to OMSI again on March 22nd to meet with Jim Todd. We presented our project beta to Jim and he was happy with how the project is coming together. Once finishing touches are done for our program, our last task will be to implement a version that will work in the planetarium. We discussed different options of how to do this, but we settled on our initial plan of creating a Dark-Matter script that can be used with the projectors. Jim provided us with many example scripts and Mike Bailey is still in contact with SkySkan for assistance making the script. 
-
-The script will consist of a beginning, middle, and end. The beginning and end will be a pre-determined set of views depicting launch and the return trip of Apollo 11. The middle will be made of different buttons that the operator can press that will switch between views that we have accounted for. To set up these views, we will use our OpenGL program to find correct positioning of objects and viewing angles. Once we have a script ready to test, we will be able to send it to Jim and he can test it on their planetarium software, then report back on how it functioned. 
 
 \end{document}
